[tool.poetry]
name = "dropbox-utils"
version = "0.1.0"
description = ""
authors = ["Yu Ono <ono.generic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dropbox = "^11.10.0"
notipy = {git = "https://github.com/u-ono/notipy.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
